# ctetris

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  main.c
include/: advanced_version.h  background_gif.h  game.h  get_files_path.h  gif_handler.h  key_handler.h  settings.h  simple_version.h  tetromino.h  ui.h
src/: advanced_version.c  background_gif.c  game.c  get_files_path.c  gif_handler.c  key_handler.c  main.c  settings.c  simple_version.c  style.css  tetromino.c  ui.c
tests/: path_test  test_path_reading.c
